--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-numpy~=2.2.6
-easyocr~=1.7.2
 Pillow~=12.0.0
 fastapi~=0.127.0
 openai~=2.14.0
@@ -7,3 +5,4 @@ python-dotenv~=1.2.1
 langdetect~=1.0.9
 uvicorn[standard]
 python-multipart
+requests~=2.32.0
