--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Pillow~=12.0.0
+# Web Server
 fastapi~=0.127.0
-openai~=2.14.0
-python-dotenv~=1.2.1
-langdetect~=1.0.9
 uvicorn[standard]
 python-multipart
-requests~=2.32.0
+
+# Gemini & Data Handling
+google-genai>=0.3.0
+pydantic>=2.0.0
+Pillow~=12.0.0
+
+# Utilities
+python-dotenv~=1.2.1
